force-app/main/default/objects/Budget/fields/Budget_Number__c.field-meta.xml
<CustomField>
    <fullName>Budget_Number__c</fullName>
    <description>Autonumber to identify Budget record</description>
    <displayFormat>BU-{00000}</displayFormat>
    <label>Budget Number</label>
    <type>AutoNumber</type>
</CustomField>