force-app/main/default/objects/Budget/fields/Budget_Reference__c.field-meta.xml
<CustomField>
    <fullName>Budget_Reference__c</fullName>
    <formula>Funding_Scheme__r.Funding_Scheme_Acronym__c + &quot;-&quot; +  Budget_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Reference</label>
    <type>Text</type>
</CustomField>