force-app/main/default/objects/Budget/fields/Current_Fund_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Fund_Balance__c</fullName>
    <formula>Amount -  Total_Disbursements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fund Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>