force-app/main/default/objects/Budget/fields/Funding_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Funding_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Scheme</label>
    <referenceTo>FundingOpportunity</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>