force-app/main/default/objects/Budget/fields/Funds_still_to_be_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Funds_still_to_be_Awarded__c</fullName>
    <formula>Amount -  Total_Awards__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds still to be Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>