force-app/main/default/objects/Budget/fields/Total_Awards__c.field-meta.xml
<CustomField>
    <fullName>Total_Awards__c</fullName>
    <description>Total funds allocated to Grant Recipient awards</description>
    <label>Total Awards</label>
    <summarizedField>BudgetAllocation.Amount</summarizedField>
    <summaryFilterItems>
        <field>BudgetAllocation.RecordTypeId</field>
        <operation>equals</operation>
        <value>Award</value>
    </summaryFilterItems>
    <summaryForeignKey>BudgetAllocation.BudgetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>