force-app/main/default/objects/Budget/fields/Total_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursements__c</fullName>
    <label>Total Disbursements</label>
    <summarizedField>BudgetAllocation.Amount</summarizedField>
    <summaryFilterItems>
        <field>BudgetAllocation.RecordTypeId</field>
        <operation>equals</operation>
        <value>Disbursement</value>
    </summaryFilterItems>
    <summaryForeignKey>BudgetAllocation.BudgetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>