force-app/main/default/objects/Budget/recordTypes/Award_Budget.recordType-meta.xml
<RecordType>
    <fullName>Award_Budget</fullName>
    <active>true</active>
    <label>Award Budget</label>
</RecordType>