force-app/main/default/objects/Budget/recordTypes/Scheme_Budget.recordType-meta.xml
<RecordType>
    <fullName>Scheme_Budget</fullName>
    <active>true</active>
    <label>Scheme Budget</label>
</RecordType>